[package]
name = "ssd1677"
version = "0.1.0"
edition = "2024"
authors = ["Robby Horvath"]
description = "Driver for the SSD1677 e-Paper display controller, for use with embedded-hal v1.0"
documentation = "https://docs.rs/ssd1677"
repository = "https://github.com/h0rv/ssd1677"
readme = "README.md"
keywords = ["embedded", "epd", "eink", "e-ink", "ssd1677"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"
rust-version = "1.85"

[dependencies]
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal = "1.0.0"
log = { version = "0.4", default-features = false }

[dev-dependencies]
embedded-graphics = "0.8"

[features]
default = ["graphics"]
std = []
alloc = []
graphics = ["dep:embedded-graphics-core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
if_not_else = "allow"
redundant_pub_crate = "allow"
missing_docs_in_private_items = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
derive_partial_eq_without_eq = "allow"
cargo_common_metadata = "allow"
match_same_arms = "allow"
use_self = "allow"
doc_markdown = "allow"
incompatible_msrv = "allow"
items_after_statements = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
